--- a/views/views.xml
+++ b/views/views.xml
@@ -8,29 +8,109 @@
 			<form>
 				<sheet>
 					<group>
+						<field name="type_move" widget="radio" />
 						<field name="name" required="1"/>
 					</group>
 					<group>
 						<group>
-							<field name="type_move" widget="radio" />
+							<!--<field name="currency_id" invisible="1"></field>-->
 							<field name="currency_id"></field>
 							<field name="amount" required="1" widget="monetary" options="{'currency_field':'currency_id'}" />
 							<field name="date" required="1" />
 						</group>
 						<group>
-							<field name="tag_ids" widget="many2many_tags"/>
-							<field name="category_id" />
+							<field name="tag_ids" widget="many2many_tags" context="{'default_type_move':type_move}" attrs="{'readonly':[('amount','&lt;',50)]}" options="{'no_quick_create':True,'no_create_edit': True}" />
+							<field name="category_id" domain="[('type_move','=',type_move)]" context="{'default_type_move':type_move,'default_name':'Nueva categoria'}" attrs="{'required':[('amount','&gt;',100)]}" options="{'no_open':True}"/>
+							<field name="user_id" />
+							<field name="email" />
 						</group>
 					</group>
 					<group>
-						<field name="receipt_image" widget="image" />
+						<field name="receipt_image" widget="image" attrs="{'invisible':[('type_move','=','ingreso')]}" />
 						<field name="notas" />
+					</group>
+				</sheet>
+				<!--
+				<div class="oe_chatter">
+					<field name="message_ids" widget="mail_thread" />
+				</div>
+				-->
+				<!-- -->
+				<div class="oe_chatter">
+	                <field name="message_follower_ids" widget="mail_followers"/>
+	                <field name="message_ids" widget="mail_thread"/>
+	            </div>
+	        	<!-- -->
+			</form>
+		</field>
+	</record>
+	<!-- -->
+
+	<!-- -->
+	<record model="ir.ui.view" id="view_tree_movimiento">
+		<field name="name">view.tree.sa.movimiento</field>
+		<field name="model">sa.movimiento</field>
+		<field name="arch" type="xml">
+			<tree decoration-success="type_move == 'ingreso'" decoration-danger="type_move == 'gasto'">
+				<field name="date" optional="show" />
+				<field name="name" />
+				<field name="type_move" optional="show" />
+				<field name="amount" widget="monetary" options="{'currency_field':'currency_id'}" />
+				<field name="tag_ids" optional="hide" widget="many2many_tags" />
+				<field name="category_id" optional="hide" />
+				<field name="currency_id" invisible="1" />
+			</tree>
+		</field>
+	</record>
+	<!-- -->
+
+	<!-- -->
+	<record model="ir.ui.view" id="view_search_movimiento">
+		<field name="name">view.search.sa.movimiento</field>
+		<field name="model">sa.movimiento</field>
+		<field name="arch" type="xml">
+			<search>
+				<field name="name" />
+				<field name="notas" />
+				<field name="category_id" />
+				<field name="tag_ids" />
+
+				<!-- Filtros -->
+				<filter name="filter_tipo_ingresos" string="Ingresos" domain="[('type_move','=','ingreso')]" />
+				<filter name="filter_tipo_gastos" string="Gastos" domain="[('type_move','=','gasto')]" />
+				<separator/>
+				<filter name="filter_tipo_today" string="Hoy" domain="[('date','&gt;=',datetime.datetime.now().strftime('%Y-%m-%d 00:00:00')),('date','&lt;=',datetime.datetime.now().strftime('%Y-%m-%d 23:59:59'))]" />
+				<filter name="filter_this_week" string="Ultimos 7 días" domain="[('date','&lt;=',context_today().strftime('%Y-%m-%d 23:59:59')),('date','&gt;=',(context_today()-datetime.timedelta(days=7)).strftime('%Y-%m-%d 00:00:00'))]" />
+				<!-- Filtros-->
+
+				<!-- Grupos -->
+				<filter name="group_type_move" string="Tipo" context="{'group_by':'type_move'}" />
+				<filter name="group_date" string="Fecha" context="{'group_by':'date'}" />
+				<!-- Grupos -->
+
+			</search>
+		</field>
+	</record>  
+	<!-- -->
+
+	<!-- -->
+	<record model="ir.ui.view" id="view_form_category">
+		<field name="name">view.form.category</field>
+		<field name="model">sa.category</field>
+		<field name="arch" type="xml">
+			<form>
+				<sheet>
+					<group>
+						<field name="name" />
+						<field name="type_move" />
+						<button name="ver_movimientos" type="object" string="Ver Movimientos"/>
 					</group>
 				</sheet>
 			</form>
 		</field>
 	</record>
 	<!-- -->
+
 	<!-- Acciones de ventana -->
 	<record model="ir.actions.act_window" id="saldo_app.action_view_movimiento">
 		<field name="name">Movimientos</field>
@@ -52,8 +132,34 @@
 		<field name="res_model">res.currency</field>
 	</record>
 
+	<record model="ir.actions.server" id="action_server_mi_cuenta">
+		<field name="name">Mi cuenta</field>
+		<field name="model_id" ref="base.model_res_users" />
+		<field name="state">code</field>
+		<field name="code">action = model.mi_cuenta()</field>
+	</record>
+
+	<!-- Extendiendo un formulario existente -->
+	<record model="ir.ui.view" id="view_res_users_add_movimientos">
+		<field name="name">view.res.users.add.movimientos</field>
+		<field name="model">res.users</field>
+		<field name="inherit_id" ref="base.view_users_simple_form" />
+		<field name="arch" type="xml">
+			<xpath expr="sheet" position="inside">
+				<group>
+					<field name="email" />
+					<field name="movimiento_ids" />
+					<field name="total_ingresos" />
+					<field name="total_egresos" />
+				</group>
+			</xpath>
+		</field>
+	</record>
+
 	<!-- Menús -->
 	<!-- Menú padre-->
+	<menuitem id="menu_mi_cuenta" name="Mi cuenta" parent="" action="action_server_mi_cuenta" />
+
 	<menuitem id="menu_main_saldoapp" name="Saldo APP" parent="" action="saldo_app.action_view_movimiento" />
 
 	<menuitem id="menu_ajustes" name="Ajustes" parent="saldo_app.menu_main_saldoapp" action="saldo_app.action_view_categoria"/>
