--- a/views/views.xml
+++ b/views/views.xml
@@ -274,6 +274,7 @@
 				<group>
 					<field name="email" />
 					<field name="movimiento_ids" />
+					<field name="count_movimientos" />
 					<field name="total_ingresos" />
 					<field name="total_egresos" />
 				</group>
